Fix issue with http 404

--- a/config/traefik.toml
+++ b/config/traefik.toml
@@ -10,9 +10,11 @@ defaultEntryPoints = ["https","http"]
     entryPoint = "https"
   [entryPoints.https]
   address = ":443"
+  compress = true
     [entryPoints.https.redirect]
       regex = "^https://palestinenights.com/(.*)"
       replacement = "https://www.palestinenights.com/$1"
+      permanent = true
   [entryPoints.https.tls]
 
 [retry]
