--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - proxy
     labels:
       traefik.enable: true
-      traefik.frontend.rule: 'Host: www.palestinenights.com;'
+      traefik.frontend.rule: 'Host: palestinenights.com, www.palestinenights.com;'
       traefik.port: 80
 
   proxy:
