--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       traefik.port: 8080
 
   mysql:
-    image: mysql
+    image: mysql:5.7
     volumes:
       - mysql-data:/var/lib/mysql
     environment:
