Add suport for authentication component

--- a/config/auth.env
+++ b/config/auth.env
@@ -1,8 +1,6 @@
-GIN_MODE=release
 DATABASE_USER=root
 DATABASE_PASSWORD=changeme
 DATABASE_NAME=restaurant
 DATABASE_HOST=mysql
 DATABASE_PORT=3306
-RSA_PUBLIC_KEY=
-
+RSA_PRIVATE_KEY=
