Add postfix relay

--- a/config/auth.env
+++ b/config/auth.env
@@ -3,4 +3,8 @@ DATABASE_PASSWORD=changeme
 DATABASE_NAME=restaurant
 DATABASE_HOST=mysql
 DATABASE_PORT=3306
+
+SMTP_HOST=smtp
+SMTP_PORT=25
+
 RSA_PRIVATE_KEY=
