--- a/config/backend.env
+++ b/config/backend.env
@@ -4,5 +4,9 @@ DATABASE_PASSWORD=changeme
 DATABASE_NAME=restaurant
 DATABASE_HOST=mysql
 DATABASE_PORT=3306
+
+SMTP_HOST=smtp
+SMTP_PORT=25
+
 RSA_PUBLIC_KEY=
 
